(This is a merge from trunk. See Rev #3703) fix SR#523 replace horitontal-align by text-align

--- a/SF/www/themes/CodeX/css/CodeX_normal.css
+++ b/SF/www/themes/CodeX/css/CodeX_normal.css
@@ -59,7 +59,7 @@ PRE,TT { font-family: courier,sans-serif; }
 .contenttable { background-color: #F7F7F7; vertical-align: top; width: 99%; border-spacing: 0; border: 0; }
 
 /* left menu specific */
-.menuframe { background-color: #e8e8e0; vertical-align: top; horitontal-align: left; width: 60px; }
+.menuframe { background-color: #e8e8e0; vertical-align: top; text-align: left; width: 60px; }
 .menutable { background-color: #e8e8e0; vertical-align: top; width: 150px; border-spacing: 0; border: 0; font-size: small; }
 .menutitle { vertical-align: top; font-weight: bold; text-align: left; color: #333333; }
 .menuitem { vertical-align: top; text-align: right; color: #333333; }
